# GenXIDE

./: ARCHITECTURE.md  CMakeLists.txt  COMPARISON.md  LICENSE  QUICK_REFERENCE.md  README.md  REFACTORING_DETAILS.md  grid.frag  grid.vert  imgui.ini
.cache/clangd/index/: Metal_Blit.h.02BC78CE962BB833.idx  SDL.c.7659E3CAA426D550.idx  SDL.h.43AA83D69E450CF7.idx  SDL_RLEaccel.c.41B9FAC690B16EB2.idx  SDL_RLEaccel_c.h.200B1DD1DF8C3880.idx  SDL_assert.c.7E5D171D76EDF655.idx  SDL_assert.h.F4110693A5B99362.idx  SDL_assert_c.h.9FED27CA39BCC407.idx  SDL_asyncio.c.F4D17FA1180B6505.idx  SDL_asyncio.h.375ADBBE45A46CC0.idx  SDL_asyncio_c.h.07C89A7DEE848DB1.idx  SDL_asyncio_generic.c.9EFAD9679BCDD19F.idx  SDL_atomic.c.38231F8D3B7290A5.idx  SDL_atomic.h.25E82A7E5D92B11E.idx  SDL_audio.c.DFDB969397477E54.idx  SDL_audio.h.0442348F257F3D72.idx  SDL_audio_c.h.A0E7E7373BACDC3E.idx  SDL_audio_channel_converters.h.5341C0C5CF7D7991.idx  SDL_audiocvt.c.E2231FEC2E31671E.idx  SDL_audiodev.c.90AF68423D8D95D3.idx  SDL_audioqueue.c.C1D1475897930267.idx  SDL_audioqueue.h.DB09D4C0BE549039.idx  SDL_audioresample.c.0A58F7EB7DC3C571.idx  SDL_audioresample.h.F0E444743B85AFA2.idx  SDL_audiotypecvt.c.A8D9E24374DEF306.idx  SDL_begin_code.h.D5C4CDF83B80B1B0.idx  SDL_bits.h.79142C6B96211F75.idx  SDL_blendfillrect.c.1EEB83225D970AC3.idx  SDL_blendfillrect.h.6753F0769B6B7C74.idx  SDL_blendline.c.F5BD4B3B2EDB8473.idx  SDL_blendline.h.60ACB9D9AC05CF6C.idx  SDL_blendmode.h.7C81597557835612.idx  SDL_blendpoint.c.A66BFF619573A6A3.idx  SDL_blendpoint.h.7ABB498395B7D9FD.idx  SDL_blit.c.3C0CACDE907990A8.idx  SDL_blit.h.153B2DAB4AD437AE.idx  SDL_blit_0.c.7E810B59A7B969AD.idx  SDL_blit_1.c.2A4AA33B8C67F939.idx  SDL_blit_A.c.1D36D7EC1908D6A7.idx  SDL_blit_N.c.18F99E93D8D13CF7.idx  (+537 more)
lib/cimgui/: README.md
lib/cimgui/generator/: cpp2ffi.lua  generator.lua
lib/cimgui/generator/output/: definitions.json  definitions.lua  structs_and_enums.json  structs_and_enums.lua
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: grid.cpp  grid.h  main.cpp  renderer.cpp  renderer.h  source.cpp  window.cpp  window.h
src/core/: application.cpp  application.h  config.h  window.cpp  window.h
src/rendering/: camera2d.cpp  camera2d.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/simulation/: cell.h  cell_factory.cpp  cell_factory.h  grid.cpp  grid.h  simulation.cpp  simulation.h
src/ui/: interface.cpp  interface.h
src/utils/: file_utils.cpp  file_utils.h
